@@ -1,6 +1,7 @@
 Version 7.3. 15 April 2019 - xxx edition
 
 -Changed "Jeff Braine" manufacturer to "New Horizons". Changed Prism machine name to "Prism 512"
+-Fixed bug when writing divmmv memory on Chloe machine and underlying RAM in space 0000-3fffh become overwritten
 
 
 
